--- a/SpeechTimer/SpeechTimer.csproj
+++ b/SpeechTimer/SpeechTimer.csproj
@@ -153,6 +153,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\SpeechTimer.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -180,6 +181,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Timer\Index.cshtml" />
+    <Content Include="Views\Timer\Controls.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
