--- a/SpeechTimer/SpeechTimer.csproj
+++ b/SpeechTimer/SpeechTimer.csproj
@@ -163,7 +163,8 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Scripts\Timer\Index.js" />
+    <Content Include="Scripts\Timer\Helper.js" />
+    <Content Include="Scripts\Timer\Countdown.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -180,7 +181,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Timer\Index.cshtml" />
+    <Content Include="Views\Timer\Countdown.cshtml" />
     <Content Include="Views\Timer\Controls.cshtml" />
   </ItemGroup>
   <ItemGroup />
