--- a/SpeechTimer/SpeechTimer.csproj
+++ b/SpeechTimer/SpeechTimer.csproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Minimal.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -185,6 +186,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Timer\Countdown.cshtml" />
     <Content Include="Views\Timer\Controls.cshtml" />
+    <Content Include="Views\Timer\_Timer.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
